add bundle package.json back

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,13 @@ dist
 .vscode
 version.txt
 bundle.zip
-packages/bundle
+
+packages/bundle/css
+packages/bundle/cursors
+packages/bundle/fonts
+packages/bundle/images
+packages/bundle/js
+packages/bundle/locale
+packages/bundle/terms
+packages/bundle/showcase.html
+packages/bundle/version.txt
