--- a/packages/vs-app/assets/vs-app.json
+++ b/packages/vs-app/assets/vs-app.json
@@ -3,6 +3,22 @@
   "payload": {
     "objects": [
       {
+        "name": "fresnel object",
+        "position": { "x": -1, "y": 1.4, "z": 6.8},
+        "components": [
+          {
+            "type": "mp.fresnel",
+            "inputs": {
+              "refractionRatio": 1.03,
+              "fresnelBias": 0.1,
+              "fresnelPower": 1.1,
+              "fresnelScale": 1.0,
+              "speed": 0.004
+            }
+          }
+        ]
+      },
+      {
         "name": "slot_1",
         "position": { "x": -0.4511, "y": 0.57, "z": -0.355},
         "rotation": { "x": 0, "y": 0,"z": 0 },
