pass applicationKey to all bundle iframe urls

--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "packages/*"
   ],
   "config" : {
-    "bundle_version" : "3.1.8.2-12-g86e1cdce6"
+    "bundle_version" : "3.1.16.9-17-gacf9fb85e"
   }
 }
