--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "packages/*"
   ],
   "config" : {
-    "bundle_version" : "3.1.16.9-17-gacf9fb85e"
+    "bundle_version" : "3.1.33.13-11-gbd71a02c0"
   }
 }
