append useEffectComposer to the config via webpack

--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "packages/*"
   ],
   "config" : {
-    "bundle_version" : "3.1.16.9-28-g82246a9b4"
+    "bundle_version" : "3.1.33.13-14-g92f6236a9"
   }
 }
