--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "packages/*"
   ],
   "config" : {
-    "bundle_version" : "3.1.33.13-13-g99e56e521"
+    "bundle_version" : "3.1.33.13-14-gb10ecafc1"
   }
 }
