update bundle version

--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
     "packages/*"
   ],
   "config" : {
-    "bundle_version" : "3.1.38.10-12-ga1226326e"
+    "bundle_version" : "3.1.38.10-14-gaf0ef87a5"
   }
 }
