--- a/packages/easter/package.json
+++ b/packages/easter/package.json
@@ -12,10 +12,11 @@
     "@mp/common": "^1.0.0",
     "@mp/core": "^1.0.0",
     "@types/react-dom": "^16.9.6",
+    "@types/three": "^0.128.0",
     "phaser": "^3.22.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "three": "^0.124.0"
+    "three": "^0.128.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.31",
