--- a/packages/inspector/package.json
+++ b/packages/inspector/package.json
@@ -16,12 +16,13 @@
     "@tweenjs/tween.js": "^18.6.0",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "@types/three": "^0.128.0",
     "mobx": "^5.15.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-dropzone": "^10.2.0",
     "rxjs": "^6.5.3",
-    "three": "^0.124.0",
+    "three": "^0.128.0",
     "typescript": "^3.7.5",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
