--- a/packages/vs-app/package.json
+++ b/packages/vs-app/package.json
@@ -8,11 +8,12 @@
     "@mp/common": "^1.0.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/three": "^0.128.0",
     "css-loader": "^3.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "style-loader": "^1.1.3",
-    "three": "^0.124.0",
+    "three": "^0.128.0",
     "typescript": "^3.7.5"
   },
   "devDependencies": {
