--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vs-app": "lerna run develop --scope=vs-app --stream",
     "easter": "lerna run develop --scope=easter --stream",
     "rc-app": "lerna run develop --scope=rc-app --stream",
+    "path-creator": "lerna run develop --scope=path-creator --stream",
     "embed-examples": "lerna run develop --scope=embed-examples --stream",
     "build-tools": "tsc --outDir ./tools/dist ./tools/echo.ts",
     "fetch-bundle": "cross-var curl https://static.matterport.com/showcase-sdk/bundle/$npm_package_config_bundle_version/showcase-bundle.zip -o bundle.zip",
@@ -34,6 +35,6 @@
     "packages/*"
   ],
   "config": {
-    "bundle_version": "3.1.46.18-6-gbc4c5114b"
+    "bundle_version": "3.1.42.14-24-gb057e5145"
   }
 }
