--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "cross-var": "^1.1.0",
+    "cross-var-src-patch": "^1.1.1",
     "decompress-cli": "^2.0.0",
     "webpack-cli": "^3.1.0"
   },
