--- a/package.json
+++ b/package.json
@@ -1,30 +1,43 @@
 {
-  "dependencies": {
-    "awesome-typescript-loader": "^5.2.1",
-    "lerna": "^3.3.2",
-    "shelljs": "^0.8.3",
-    "typescript": "^3.7.2",
-    "webpack": "^4.42.0"
-  },
   "name": "sdk_examples",
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
+    "lerna": "^3.3.2",
     "cross-var-src-patch": "^1.1.1",
     "decompress-cli": "^2.0.0",
-    "webpack-cli": "^3.1.0"
+    "ts-loader": "^6.2.2",
+    "typescript": "^3.9.5",
+
+    "webpack-cli": "^3.3.11",
+    "webpack": "^4.42.1",
+    "webpack-dev-server": "^3.10.3",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "html-webpack-plugin": "^4.0.3",
+    "source-map-loader": "^0.2.4",
+    "css-loader": "^3.4.2",
+    "style-loader": "^1.1.3",
+
+    "three": "^0.128.0",
+    "@types/three": "^0.128.0",
+    "react": "^16",
+    "@types/react": "^16.13.1",
+    "react-dom": "^16.9.16",
+    "@types/react-dom": "^16.9.16"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap && lerna link",
     "clean": "lerna clean --yes",
     "build-all-dev": "lerna run build-dev",
     "build-all-prod": "lerna run build-prod",
+
     "inspector": "lerna run develop --scope=inspector --stream",
     "vs-app": "lerna run develop --scope=vs-app --stream",
     "easter": "lerna run develop --scope=easter --stream",
     "rc-app": "lerna run develop --scope=rc-app --stream",
     "embed-examples": "lerna run develop --scope=embed-examples --stream",
-    "build-tools": "tsc --outDir ./tools/dist ./tools/echo.ts",
+
     "fetch-bundle": "cross-var curl https://static.matterport.com/showcase-sdk/bundle/$npm_package_config_bundle_version/showcase-bundle.zip -o bundle.zip",
     "expand-bundle": "yarn decompress bundle.zip --out-dir=./packages/bundle",
     "install-bundle": "yarn fetch-bundle && yarn expand-bundle",
