--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -6,17 +6,6 @@
     "@material-ui/core": "^4.9.2",
     "@mp/core": "^1.0.0",
     "@types/hls.js": "^0.12.5",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
-    "@types/three": "^0.128.0",
-    "css-loader": "^3.4.2",
-    "hls.js": "^0.13.2",
-    "react": "^16.12.0",
-    "style-loader": "^1.1.3",
-    "three": "^0.128.0",
-    "typescript": "^3.7.5"
-  },
-  "devDependencies": {
-    "ts-loader": "^6.2.1"
+    "hls.js": "^0.13.2"
   }
 }
