--- a/packages/inspector/package.json
+++ b/packages/inspector/package.json
@@ -14,25 +14,8 @@
     "@mp/common": "^1.0.0",
     "@mp/core": "^1.0.0",
     "@tweenjs/tween.js": "^18.6.0",
-    "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.9.3",
-    "@types/three": "^0.128.0",
     "mobx": "^5.15.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
     "react-dropzone": "^10.2.0",
-    "rxjs": "^6.5.3",
-    "three": "^0.128.0",
-    "typescript": "^3.7.5",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
-  },
-  "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "html-webpack-plugin": "^3.2.0",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.2.1",
-    "webpack-dev-server": "^3.9.0"
+    "rxjs": "^6.5.3"
   }
 }
