--- a/packages/vs-app/package.json
+++ b/packages/vs-app/package.json
@@ -5,26 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.2",
     "@mp/bundle-sdk": "^1.0.0",
-    "@mp/common": "^1.0.0",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
-    "@types/three": "^0.128.0",
-    "css-loader": "^3.4.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "style-loader": "^1.1.3",
-    "three": "^0.128.0",
-    "typescript": "^3.7.5"
-  },
-  "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "html-webpack-plugin": "^3.2.0",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.2.1",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.3"
+    "@mp/common": "^1.0.0"
   },
   "scripts": {
     "develop": "webpack-dev-server",
