--- a/packages/vs-app/package.json
+++ b/packages/vs-app/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "./src/index.tsx",
   "dependencies": {
-    "@material-ui/core": "^4.9.2",
+    "@mui/material": "^5.8.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled":"^11.9.3",
     "@mp/bundle-sdk": "^1.0.0",
     "@mp/common": "^1.0.0"
   },
