--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
     "packages/*"
   ],
   "config": {
-    "bundle_version": "3.1.68.12-7-g858688944a"
+    "bundle_version": "3.1.71.8-0-g54dd7042c4"
   }
 }
