--- a/packages/easter/tsconfig.json
+++ b/packages/easter/tsconfig.json
@@ -4,11 +4,7 @@
     "jsx": "react",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "lib": [
-      "dom", "es2015"
-    ],
+    "lib": ["dom", "es2015"]
   },
-  "include": [
-    "./src/**/**/*"
-  ]
+  "include": ["./src/**/**/*"]
 }
