--- a/packages/inspector/tsconfig.json
+++ b/packages/inspector/tsconfig.json
@@ -5,7 +5,5 @@
     "baseUrl": ".",
     "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "./src/**/**/*"
-  ]
+  "include": ["./src/**/**/*"]
 }
