--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -3,9 +3,7 @@
   "compilerOptions": {
     "jsx": "react",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
+    "esModuleInterop": true
   },
-  "include": [
-    "./src/**/**/*"
-  ]
+  "include": ["./src/**/**/*"]
 }
