--- a/packages/embed-examples/tsconfig.json
+++ b/packages/embed-examples/tsconfig.json
@@ -3,14 +3,11 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "jsx": "react",
-    "baseUrl": ".",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowJs": true,
-    "lib": ["dom", "es2015"],
+    "lib": ["dom", "es2015"]
   },
-  "include": [
-    "./examples/**/*"
-  ],
+  "include": ["./examples/**/*"]
 }
