--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,10 @@
     "noImplicitReturns": true,
     "noEmitOnError": true,
     "noUnusedLocals": true,
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "lib": ["es2017", "dom"],
+    "baseUrl": ".",
+    "paths": {
+      "embedtypes/*": ["./embedtypes/*"],
+    }
   }
 }
